# Agentic-Werewolf

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: game.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  memory.py  player.py  prompts.py
src/communication/: __init__.py  channels.py  markdown_logger.py
src/engine/: __init__.py  game.py  phases.py  roles.py
src/llm/: __init__.py  openrouter.py
